move audio buffer logic to rust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,11 @@ features = [
     "console",
     "Window",
     "Performance",
+    "AudioContext",
+    "AudioBuffer",
+    "AudioBufferSourceNode",
+    "AudioDestinationNode",
+    "AudioNode",
 ]
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
