--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ lto = true
 # The `wasm-bindgen` crate provides the bare minimum functionality needed
 # to interact with JavaScript.
 wasm-bindgen = "0.2.45"
-screech = "0.8.1"
+screech = "0.9.0"
 
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
@@ -33,12 +33,17 @@ version = "0.3.22"
 features = [
     "console",
     "Window",
+    "Document",
+    "Element",
     "Performance",
     "AudioContext",
     "AudioBuffer",
     "AudioBufferSourceNode",
     "AudioDestinationNode",
     "AudioNode",
+    "CanvasRenderingContext2d",
+    "HtmlCanvasElement",
+    "KeyboardEvent",
 ]
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
