add drag handler, basic step sequencing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,8 @@ features = [
     "CanvasRenderingContext2d",
     "HtmlCanvasElement",
     "KeyboardEvent",
+    "DragEvent",
+    "DataTransfer",
 ]
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
