--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,13 @@ crate-type = ["cdylib"]
 lto = true
 
 [features]
-# If you uncomment this line, it will enable `wee_alloc`:
-#default = ["wee_alloc"]
 
 [dependencies]
 # The `wasm-bindgen` crate provides the bare minimum functionality needed
 # to interact with JavaScript.
 wasm-bindgen = "0.2.78"
 screech = "0.9.0"
+wavv = "0.1.4"
 
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
