--- a/web-client/sim-web-client/Cargo.toml
+++ b/web-client/sim-web-client/Cargo.toml
@@ -26,6 +26,8 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 # Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
 wee_alloc = { version = "0.4.5", optional = true }
 sim = { path = "../../sim" }
+serde_json = "1.0.85"
+serde = { version = "1.0", features = ["derive"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
@@ -36,6 +38,12 @@ wasm-bindgen-test = "0.3.13"
 version = "0.3.55"
 features = [
     "console",
+    "Window",
+    "Document",
+    "Element",
+    "CanvasRenderingContext2d",
+    "HtmlCanvasElement",
+    "ImageData",
 ]
 
 [profile.release]
