--- a/sim/Cargo.toml
+++ b/sim/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-screech = "0.10.0"
+screech = { path = "../../screech" }
