--- a/web-client/package.json
+++ b/web-client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "npm run wasm && vite",
     "wasm": "wasm-pack build ./sim-web-client --target web",
-    "build": "tsc && vite build",
+    "build": "npm run wasm && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
